# Distributed-Task-Queue-like-a-mini-Celery-

./: CMakeCache.txt  CMakeLists.txt  README.md  build.sh  conanfile.txt
proto/: task.proto
server/: main.cpp
